font-size fixing blurry icons

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -357,3 +357,7 @@ p.page-actions {
     margin: 1rem 0.8rem;
     margin-left: -0.4rem;
 }
+
+html {
+    font-size: 100%;
+}
